--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,20 @@ body {
 .homeContent{
     padding-top: 150px;
 }
+
+.exploreImage{
+  border-radius:2%;
+}
+
+
+
+/** `sm` applies to x-small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) { 
+
+  body {
+   text-align: center;
+  }
+
+
+
+ }
